fix prevent exposing not relevant data